Fix up the vertical alignment of icons in the summary list detail.

--- a/scss/_summary.scss
+++ b/scss/_summary.scss
@@ -126,6 +126,10 @@
 					font-weight: 500;
 					line-height: 22px;
 					color: $list-summary-number-color;
+					i {
+						line-height: 0;
+						vertical-align: middle;
+					}
 				}
 			}
 		}
